tests/invalid/Ensures_Invalid_1.whiley

function f() => int
ensures (2 * $) == 1:
    return 1

method main(System.Console sys) => void:
    debug Any.toString(f())
